@@ -1,0 +1,6 @@
+<strings>
+    <string id="30002">Set default Playback</string>
+    <string id="30003">F4mProxy</string>
+    <string id="30004">Direct</string>
+    <string id="30005">Filter on this</string>
+</strings>
