@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.uiptv"
        name="Ultimate IPTV"
-       version="1.0.2"
-       provider-name="Patrick Dijkkamp">
+       version="1.0.3"
+       provider-name="mortael">
     <requires>
         <import addon="xbmc.python" version="2.1.0"/>
+        <import addon="script.video.F4mProxy" version="2.5.7" />
     </requires>
     <extension point="xbmc.python.pluginsource"
                library="default.py">
@@ -13,7 +14,7 @@
     <extension point="xbmc.addon.metadata">
         <platform>all</platform>
         <license>GPL 2.0</license>
-        <summary lang="en">Watch IPTV from a blog</summary>
-        <description lang="en">Watch IPTV from a blog. Daily new links.</description>
+        <summary lang="en">Ultimate IPTV</summary>
+        <description lang="en">Access the IPTV lists from a blog. Daily new links.</description>
     </extension>
 </addon>
